# OS

./: .gitignore  CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
lab1/: CMakeLists.txt  child  child.c  numbers.txt  parent  parent.c  Отчет по лабе №1.docx
lab1/отчет/: Отчет по лабе №1.docx
lab2/: graphs.py  main  main.c
lab3/: child.c  parent.c  test.txt
other/Шаблон отчета/: Пример отчета.docx
